# hi_project_recap

./: CMakeLists.txt  README.md  compile.sh  run.sh  update.txt  wave_func.f90
INPUT/: DATBDMS.txt  DATIN.txt  DATMASS.txt  DATWPMS.txt  fterm_final.txt  init_cond.txt  no_btm.txt
OUTPUT/: outmesh.txt
app/: define_damp.py  disp_anim.py  gen_solid.py  peel.py  rampf.py  show_value.py
lib/: kinds.f90  tripole.f90
mod_green_func/: green_func.f90  main.f90
module/: bvar_mod.mod  fcvar_mod.mod  gcr_mod.mod  gmres_mod.mod  hi_intg.mod  hi_mod_funcs.mod  intvar_mod.mod  mfunc_mod.mod  mvar_mod.mod  pfft_mod.mod  precor_mod.mod  pvar_mod.mod  sebsm_mod.mod  trvar_mod.mod  wmat_mod.mod
python_script/: disp_anim.py  error_analysis.py
src/: CMakeLists.txt  Func_md.f  Var_md.f  WFuncs1.f90  bodyfd.f  constant.f90  elem_proc.f90  free_term.f90  grad.f90  green_func.f90  io  main.f90  main1.f  mass.f  mass.f90  matrix_mod.f90  mesh.f90  new_sing.f90  sieppem.f90  solidagM.f  tass0_freq.f90  tass0_time.f90  tassb0.f  tassb0.f90  tassbt.f90  tforce.f  tforce.f90  tgreen.f90  time_mod.f90  timestep.f90  tsing1f.f90  tvars.f  wave.f90
src/add_on/: common_block.f90
src/data/: CMakeLists.txt  convms.f  data_wrapper.f90  matrix_mod.f90  mesh.f90  mesh.new.f90  misc_var_mod.f90  motion.f90  potential.f90  sld_angle.f90  solver_mod.f90  time_mod.f90  wave.f90  wave2.f90
src/data/include/: prepare_mesh_2.f90
src/elem_proc/: ElemIntgl0.f90
src/elem_proc/add_on/: ElemIntgl1.f90
src/hi_intgl/: eval_reg.f90  hi_funcs.f90  hi_integral.f90
src/hi_intgl/add_on/: coef_b.f90  eval_hi_kernel.f90  hi_kernel.f90  intg_rho.f90  new_eval.f90  run_thru_elems.f90  test.f90  test2.f90  test3.f90  test6.f90  test_cp.f90
src/io/: Ostream.f90  a.out  io.mod  shape_mod.mod  test.f90
src/lib_const/: CMakeLists.txt  constant.f90  kinds.f90
src/lib_funcs/: CMakeLists.txt  Func_md.f  WFuncs1.f90  constant.f90  green_func.f90  kinds.f90  linalg.f90  shape_func.f90  solidagM.f  solidagM.f90  tripole.f90  wave_func.f90
src/property/: CMakeLists.txt  bd_prop.f90  gaussian.f90
src/property/include/: bodyfd.f90
src/utils/: CMakeLists.txt  free_term.f90  gaussian.f90  grad.f90  hi2  tripole.f90  tsing1f.f90
src/utils_motion/: CMakeLists.txt  motion.f90
